--- a/compose.yaml
+++ b/compose.yaml
@@ -12,3 +12,8 @@ services:
       MYSQL_USER: <user>
     ports:
       - '3306:3306'
+    volumes:
+      - db_data:/var/lib/mysql
+
+volumes:
+  db_data:
